[package]
name = "bosconian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = "0.15.0"
bevy_prototype_lyon = "0.13.0"
bevy_rapier2d = { version = "0.29.0", features = ["debug-render-2d"] }
rand = "0.8.5"
webbrowser = "0.8.10"
bevy-inspector-egui = "0.30.0"

[profile.dev.package."*"]
opt-level = 3
